[package]
authors = [
    "Alex Cottner <acottner@mozilla.com>",
    "Michael Cooper <mcooper@mozilla.com>",
    "Mathieu Leplatre <mleplatre@mozilla.com>"
]
edition = "2024"
rust-version = "1.89"
name = "classify-client"
version = "0.3.0"

[dependencies]
actix = "^0.13.5"
actix-web = "^4.12.1"
actix-rt = "^2"
cadence = "^1.6.0"
envy = "^0.4.2"
futures = "^0.3"
lazy_static = "^1.5.0"
maxminddb = "0.27.1"
regex = "^1.12.2"
sentry = "^0.46.0"
sentry-actix = "^0.46.0"
serde = "^1.0.228"
serde_derive = "^1.0.219"
serde_json = "^1.0.148"
slog = "^2.8"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-mozlog-json = "0.1.0"
slog-term = "2.9.2"
slog_derive = "0.2"
once_cell = "1.21.3"
url = "2.5.8"

[dependencies.chrono]
features = ["serde"]
version = "^0.4"

[dependencies.ipnet]
features = ["serde"]
version = "^2"
